# multi_icp

./: .gitignore  CMakeLists.txt  README.md
executables/: CMakeLists.txt  multi_icp.code-workspace  test_4dtree.cpp  test_correspondences.cpp  test_dataset_reader.cpp  test_icp_solver.cpp  test_map_correspondence.cpp  test_multi_icp_complete.cpp  test_multi_icp_complete_v2.cpp  test_multi_icp_covariance_kdtree.cpp  test_multi_icp_my_kdtree.cpp  test_multi_icp_rp_kdtree.cpp  test_multi_icp_solver.cpp  test_multi_icp_solver_4dtree.cpp  test_multi_icp_solver_complete.cpp  test_multi_icp_solver_v2.cpp  test_nicp_3d.cpp  test_normals.cpp  test_normals_estimation.cpp  test_points_correspondences.cpp  test_poses_correspondences.cpp
src/: brute_force_search.h  correspondence_finder.cpp  correspondence_finder.h  dataset.cpp  dataset.h  defs.h  drawer.cpp  drawer.h  eigen_01_point_loading.h  eigen_covariance.h  eigen_kdtree.h  icp_solver.cpp  icp_solver.h  kdtree.h  map.cpp  map.h  multi_icp_solver.cpp  multi_icp_solver.h  solver.cpp  solver.h  solver_2d.cpp  solver_2d.h  split.h  utils.cpp  utils.h
